--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,12 +43,14 @@ ol {
 }
 
 .send {
-  position: sticky;
-  top: 0;
+  position: fixed;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
   align-items: center;
   display: flex;
   width: 390px;
-  margin: 20px auto;
+  // margin: 20px auto;
   overflow: hidden;
   padding: 5px;
   background-color: #ccc;
